--- a/templates/frame.haml
+++ b/templates/frame.haml
@@ -146,21 +146,50 @@
     <!--[if lt IE 9]>
       %script{src:"//html5shim.googlecode.com/svn/trunk/html5.js"}
     <![endif]-->
-
 -load smartmin
+-load macros
+-macro messages
+  -if messages
+    -for msg in messages
+      %div{class:"alert alert-{{ message.tags }}"}
+        {{ msg }}
+
+-macro post-header
+
+-macro page-container
+  .flex-grow
+    .page-content
+      -block suspension
+        {% if user_org.is_suspended %}
+          .px-12.-mt-4
+            -include "org_suspended_include.haml"
+        {% endif %}
+
+      .px-12.py-4
+        -block page-top
+          .flex.items-start
+            .flex.flex-col.mr-5.leading-tight
+              .page-title
+                -block title
+                  
+              .page-subtitle
+                -block subtitle
+
+            .flex-grow
+              .flex.justify-end.w-full
+                -block gear-menu
+                  -include "gear_links_include.haml"
+
+          -block post-title
+
+        .mt-6
+          -block content
+        
+        -block post-content
+
 {% block body %}
 
 %body#pageBody.bg-gradient
-
-  .weni-announcement.h-24
-    .flex.flex-row.justify-center
-      .weni-left
-        Ilhasoft, Push e BotHub agora são Weni.
-      .weni-divider
-      .weni-right
-        A partir dessa fusão, nosso propósito é continuar evoluindo a transformação digital na comunicação das organizações.
-      %a.weni-button(href="https://ilhasoft.com.br/somos-weni")
-        Saiba mais
 
   -include "components-body.html"
 
@@ -173,78 +202,67 @@
         fields="/api/v2/fields.json"
         globals="/api/v2/globals.json")
 
-  .flex.flex-col.h-full
-    <!-- Header -->
-    #header
-      &nbsp;
+  -if is_weni
+    -block weni-side
+      .flex.flex-col{style: "height: inherit"}
+        .flex.flex-row.h-full
+          <!-- Sidemenu -->
+          -block sidemenu
+            #unnnic-sidebar.flex-col.h-screen.bg-color-unnnic-snow.unnnic-right-menu-divider
+              -block info
+              
+              -block side
+                -include 'includes/side.html'
 
-    %a#big-logo.logo.icon-logo{href:"{% if user.is_authenticated %}{% url 'msgs.msg_inbox' %}{% else %}/{% endif %}", title:"{{brand.name}}", class:"hover:no-underline"}
-      .name
-        {{brand.name}}
+              -if messages
+                -usemacro messages
 
-    -block nav
-      -include 'includes/nav.html'
+          #unnnic-content.flex.flex-col.w-full
+            -usemacro post-header
+            <!-- Content -->
+            -usemacro page-container
 
-    -if user_org
-      .org-header
-        -if user_orgs|length > 1
-          .pull-right.toggle
-            .icon-menu-2
+            .footer.text-center.py-12.bg-gray-200.text-gray-500
+              {{ request.branding.credits|safe }}    
+  -else
+    .flex.flex-col.h-full
+      <!-- Header -->
+      #header
+        &nbsp;
 
-        .org
-          {{ user_org.name|truncatechars:30 }}
+      %a#big-logo.logo.icon-logo{href:"{% if user.is_authenticated %}{% url 'msgs.msg_inbox' %}{% else %}/{% endif %}", title:"{{brand.name}}", class:"hover:no-underline"}
+        .name
+          {{brand.name}}
 
-        .other-orgs.hide
-          -for org in user_orgs
-            -if org != user_org
-              .org
-                %a.posterize{href:'{% url "orgs.org_choose"%}?organization={{org.pk}}'}
-                  {{ org.name }}
+      -block nav
+        -include 'includes/nav.html'
 
-    -if messages
-      -block messages
-        -if messages
-          -for msg in messages
-            %div{class:"alert alert-{{ message.tags }}"}
-              {{ msg }}
+      -if user_org
+        .org-header
+          -if user_orgs|length > 1
+            .pull-right.toggle
+              .icon-menu-2
 
+          .org
+            {{ user_org.name|truncatechars:30 }}
 
-    -block post-header
-    <!-- Content -->
-    -block page-container
-      .flex-grow
-        .page-content
-          -block suspension
-            {% if user_org.is_suspended %}
-              .px-12.-mt-4
-                -include "org_suspended_include.haml"
-            {% endif %}
+          .other-orgs.hide
+            -for org in user_orgs
+              -if org != user_org
+                .org
+                  %a.posterize{href:'{% url "orgs.org_choose"%}?organization={{org.pk}}'}
+                    {{ org.name }}
 
-          .px-12.py-4
-            -block page-top
-              .flex.items-start
-                .flex.flex-col.mr-5.leading-tight
-                  .page-title
-                    -block title
-                      
-                  .page-subtitle
-                    -block subtitle
-
-                .flex-grow
-                  .flex.justify-end.w-full
-                    -block gear-menu
-                      -include "gear_links_include.haml"
-
-              -block post-title
+      -if messages
+        -usemacro messages
 
 
-            .mt-6
-              -block content
-            
-            -block post-content
+      -usemacro post-header
+      <!-- Content -->
+      -usemacro page-container
 
-    .footer.text-center.py-12.bg-gray-200.text-gray-500
-      {{ request.branding.credits|safe }}
+      .footer.text-center.py-12.bg-gray-200.text-gray-500
+        {{ request.branding.credits|safe }}
 
   -trans 'Delete' as title
   %temba-dialog#general-delete-confirmation{header:"{{title|escapejs}}", primaryButtonName:"{{title|escapejs}}", destructive: "true"}
@@ -267,6 +285,18 @@
           var anon_org = false;
         {% endif %}
       {% endif %}
+
+      function inIframe () {
+        try {
+          if (window.self !== window.top) {
+            $(".org-header").hide();
+          } else {
+            $(".org-header").show();
+          }
+        } catch (e) {
+          $(".org-header").hide();
+        }
+      }
 
       function posterize(href) {
         var url = $.url(href);
@@ -335,6 +365,11 @@
 
     :javascript
       $(document).ready(function() {
+
+        {% if is_weni %}
+          inIframe();
+        {% endif %}
+
         if (navigator.appVersion.indexOf("Win")!=-1) {
           $("html").addClass("windows");
         }
