--- a/templates/orgs/org_choose.haml
+++ b/templates/orgs/org_choose.haml
@@ -1,6 +1,9 @@
 -extends "smartmin/base.html"
 -load i18n
 
+-if is_weni
+  -block sidemenu
+
 -block title
   .page-title
     -trans "Choose Workspace"
