--- a/templates/contacts/contact_invite_participants.haml
+++ b/templates/contacts/contact_invite_participants.haml
@@ -33,6 +33,18 @@
                 .count(onclick="goto(event)" href='{{folder.url}}')
                   {{ folder.count | intcomma }}
 
+          .lp-nav.upper
+            .font-normal.uppercase.text-xs.pb-1.text-gray-500
+              - trans "Smart Groups"
+            .inner-scroll
+              -for group in groups
+                -if group.is_dynamic
+                  .lp-nav-item(class="{% if current_group.id == group.pk %}font-normal{% endif %}")
+                    .name(onclick="goto(event)" href='{% url "contacts.contact_invite_participants"  %}?group={{group.uuid}}')
+                      {{group.label}}
+                    .count(onclick="goto(event)" href='{% url "contacts.contact_invite_participants"  %}?group={{group.uuid}}')
+                      {{ group.count | intcomma }}
+
           .lp-nav.lower
             .font-normal.uppercase.text-xs.text-gray-500.pb-1
               - trans "Groups"
@@ -48,13 +60,21 @@
         .right
           - if has_contacts
             - block contacts-list
-              .flex.w-full.mb-4.items-end.flex-wrap.justify-end.-mt-2(style="min-height:41px")
+              .flex.w-full.mb-4.flex-col.flex-wrap.justify-start.-mt-2(style="min-height:41px")
 
                 - block action-buttons
+                  .flex-grow.ml-1.self-start.items-start
+                    .flex.flex-col.pr-12
+                      .page-title.leading-tight
+                        -block title
+                          {{title}}
+                        .subtitle
+                          -block subtitle
+
                   .list-buttons-container.mr-2.mt-2.flex-grow.h-full.visible
                     %form.controls{method:"POST"}
                       - csrf_token
-                        %label.control-label
+                        %label.m-0.control-label
                           %trans Opt-in flow
                         %div(style="display: flex;")
                           %temba-select#id_opt_in_flow.w-96{float:'left', name:'optin_flow_uuid', data-url-template:"{% url 'flows.flow_broadcast' '0' %}", placeholder:'{{_("Opt-in flow")}}'}
@@ -267,6 +287,21 @@
     .invite-column {
       display: table-cell !important;
       width: 100px;
+    }
+
+    .control-label {
+      margin-bottom: 5px;
+      margin-left: 4px;
+      display: block;
+      font-weight: 400;
+      font-size: 13px;
+      letter-spacing: 0.05em;
+      line-height: normal;
+      color: rgb(119, 119, 119);
+    }
+
+    #id_open_in_flow_editor {
+      margin-left: 4px;
     }
 
 -block extra-script
