--- a/templates/frame.haml
+++ b/templates/frame.haml
@@ -202,7 +202,7 @@
         fields="/api/v2/fields.json"
         globals="/api/v2/globals.json")
 
-  -if is_weni
+  -if use_weni_layout
     -block weni-side
       .flex.flex-col{style: "height: inherit"}
         .flex.flex-row.h-full
@@ -366,7 +366,7 @@
     :javascript
       $(document).ready(function() {
 
-        {% if is_weni %}
+        {% if use_weni_layout %}
           inIframe();
         {% endif %}
 
