--- a/templates/triggers/trigger_list.haml
+++ b/templates/triggers/trigger_list.haml
@@ -44,15 +44,15 @@
                 -if org_perms.triggers.trigger_update
                   .action-buttons.list-buttons-container.h-full.mr-2.flex-grow
                     .list-buttons.flex.items-center.-mx-2.h-full
-                        -if 'restore' in actions
-                          .button-action.object-btn-restore
-                            .-mt-1.mr-2.glyph.icon-checkmark
-                            -trans "Activate"
+                      -if 'restore' in actions
+                        .button-action.object-btn-restore
+                          .-mt-1.mr-2.glyph.icon-checkmark
+                          -trans "Activate"
 
-                        -if 'archive' in actions
-                          .button-action.object-btn-archive
-                            .-mt-1.mr-2.glyph.icon-box
-                            -trans "Archive"
+                      -if 'archive' in actions
+                        .button-action.object-btn-archive
+                          .-mt-1.mr-2.glyph.icon-box
+                          -trans "Archive"
               .flex-grow.ml-2.items-center
                 -block title-text
                   .page-title.leading-tight
@@ -66,65 +66,74 @@
                 %input(type='hidden' name='status' value='{{request.REQUEST.status}}')
 
             -block trigger-list
-                %table.list.trigger-list.lined{class: '{% if org_perms.flows.flow_update %}selectable{% endif %}'}
-                  %tbody
-                    -for obj in object_list
-                      %tr.trigger.object-row{ data-object-id: "{{ obj.id }}", onrowclick:"updateTrigger(event, {{obj.id}})" }
-                        - if org_perms.triggers.trigger_update
-                          %td.trigger.checkbox.object-row-checkbox
-                            %temba-checkbox{onclick:"handleRowSelection(this)"}
-                        %td.w-full
-                          -if obj.trigger_type == 'K'
-                            -trans "The keyword"
+              %table.list.trigger-list.lined{class: '{% if org_perms.flows.flow_update %}selectable{% endif %}'}
+                %tbody
+                  -for obj in object_list
+                    %tr.trigger.object-row{ data-object-id: "{{ obj.id }}", onrowclick:"updateTrigger(event, {{obj.id}})" }
+                      - if org_perms.triggers.trigger_update
+                        %td.trigger.checkbox.object-row-checkbox
+                          %temba-checkbox{onclick:"handleRowSelection(this)"}
+                      %td.w-full
+                        -if obj.trigger_type == 'K'
+                          -trans "The keyword"
+                          %b
+                            {{obj.keyword}}
+                        -elif obj.trigger_type == 'M'
+                          -trans "A missed call"
+                        -elif obj.trigger_type == 'C'
+                          -trans "An uncaught message"
+                        -elif obj.trigger_type == 'V'
+                          -trans "An inbound call"
+                        -elif obj.trigger_type == 'N'
+                          -trans "A new conversation"
+                          -if obj.channel
+                            -trans "on"
                             %b
-                              {{obj.keyword}}
-                          -elif obj.trigger_type == 'M'
-                            -trans "A missed call"
-                          -elif obj.trigger_type == 'C'
-                            -trans "An uncaught message"
-                          -elif obj.trigger_type == 'V'
-                            -trans "An inbound call"
-                          -elif obj.trigger_type == 'N'
-                            -trans "A new conversation"
-                            -if obj.channel
-                              -trans "on"
-                              %b
-                                %a{href:'{%url "channels.channel_read" obj.channel.uuid %}'}= obj.channel
+                              %a{href:'{%url "channels.channel_read" obj.channel.uuid %}'}= obj.channel
 
-                          -elif obj.trigger_type == 'R'
-                            -trans "The referrer id"
-                            %b
-                              {{obj.referrer_id}}
-                            -if obj.channel
-                              -trans "on the channel"
-                              .linked.inline{onclick:"goto(event)", href:'{%url "channels.channel_read" obj.channel.uuid %}'}
-                                {{obj.channel}}
+                        -elif obj.trigger_type == 'R'
+                          -trans "The referrer id"
+                          %b
+                            {{obj.referrer_id}}
+                          -if obj.channel
+                            -trans "on the channel"
+                            .linked.inline{onclick:"goto(event)", href:'{%url "channels.channel_read" obj.channel.uuid %}'}
+                              {{obj.channel}}
 
-                          -if obj.schedule
-                            -trans "Start"
+                        -if obj.schedule
+                          -trans "Start"
+                        -else
+                          -trans "starts"
+                        .linked.inline(onclick="goto(event)" href='{%url "flows.flow_editor" obj.flow.uuid %}')<
+                          {{obj.flow}}
+
+                        -if obj.schedule
+                          -if obj.schedule.next_fire and not obj.is_archived
+                            {{ obj.schedule.get_display }}
                           -else
-                            -trans "starts"
-                          .linked.inline(onclick="goto(event)" href='{%url "flows.flow_editor" obj.flow.uuid %}')<
-                            {{obj.flow}}
+                            -trans "is not scheduled"
 
-                          -if obj.schedule
-                            -if obj.schedule.next_fire and not obj.is_archived
-                              {{ obj.schedule.get_display }}
-                            -else
-                              -trans "is not scheduled"
+                        -if obj.extra
+                          |
+                          -trans "Contains "
+                          - if org_perms.triggers.trigger_update
+                            %a.update-trigger{ data-object-id: "{{ obj.id }}", onclick:"updateTrigger(event, {{obj.id}})" }
+                              -trans "flow parameters"
+                          - else
+                            -trans "Contains flow parameters"
 
-                        %td{onclick:"handleRowSelection(this)", width: "250px" }
-                          -include "includes/recipients.haml" with groups=obj.groups.all contacts=obj.contacts.all
+                      %td{onclick:"handleRowSelection(this)", width: "250px" }
+                        -include "includes/recipients.haml" with groups=obj.groups.all contacts=obj.contacts.all
 
-                      -empty
-                        %tr.empty_list
-                          %td{colspan:3}
-                            -trans "No matching triggers."
+                    -empty
+                      %tr.empty_list
+                        %td{colspan:3}
+                          -trans "No matching triggers."
 
-                  -block extra-rows
+                -block extra-rows
 
-                -block paginator
-                  -include "includes/pagination.haml"
+              -block paginator
+                -include "includes/pagination.haml"
   
   %temba-modax#update-trigger
 -block extra-script
