--- a/templates/campaigns/campaignevent_update.haml
+++ b/templates/campaigns/campaignevent_update.haml
@@ -87,6 +87,18 @@
       }
     });
 
+    var flowField = body.querySelector("#id_flow_to_start");
+    setTimeout(() => {
+      var idFlowVal = flowField.values[0].value;
+      {% if flow_parameters_fields and flow_parameters_values %}
+          var flowParamsFields = "{{ flow_parameters_fields }}".split(",");
+          var flowParamsValues = "{{ flow_parameters_values }}".split(",");
+          _requestAndBuildFlowParams(idFlowVal, flowParamsFields, flowParamsValues);
+      {% else %}
+        _requestAndBuildFlowParams(idFlowVal);
+      {% endif %}
+    }, 100)
+
     {% if flow_parameters_fields and flow_parameters_values %}
       var container = body.querySelector("#embed-container-update");
       var flowParamsFields = "{{ flow_parameters_fields }}".split(",");
@@ -94,7 +106,20 @@
       buildTriggerFlowParams(flowParamsFields, flowParamsValues, 'update', body);
     {% endif %}
 
-
+    function _requestAndBuildFlowParams(flowId, fields, values) {
+      if (flowId) {
+        var api_url = "{% url 'flows.flow_flow_parameters' %}?flow_id=" + flowId;
+        $.getJSON(api_url).done(function(data) {
+          if (fields && values) {
+            buildTriggerFlowParams(data.results, values, 'update', body);
+          } else {
+            buildTriggerFlowParams(data.results, [], 'update', body);
+          }
+        });
+      } else {
+        buildTriggerFlowParams([], [], 'update', body);
+      }
+    }
 
 -block modal-extra-style
   {{ block.super }}
