--- a/templates/campaigns/campaignevent_update.haml
+++ b/templates/campaigns/campaignevent_update.haml
@@ -91,8 +91,8 @@
     setTimeout(() => {
       var idFlowVal = flowField.values[0].value;
       {% if flow_parameters_fields and flow_parameters_values %}
-          var flowParamsFields = "{{ flow_parameters_fields }}".split(",");
-          var flowParamsValues = "{{ flow_parameters_values }}".split(",");
+          var flowParamsFields = "{{ flow_parameters_fields }}".split("|");
+          var flowParamsValues = "{{ flow_parameters_values }}".split("|");
           _requestAndBuildFlowParams(idFlowVal, flowParamsFields, flowParamsValues);
       {% else %}
         _requestAndBuildFlowParams(idFlowVal);
@@ -101,8 +101,8 @@
 
     {% if flow_parameters_fields and flow_parameters_values %}
       var container = body.querySelector("#embed-container-update");
-      var flowParamsFields = "{{ flow_parameters_fields }}".split(",");
-      var flowParamsValues = "{{ flow_parameters_values }}".split(",");
+      var flowParamsFields = "{{ flow_parameters_fields }}".split("|");
+      var flowParamsValues = "{{ flow_parameters_values }}".split("|");
       buildTriggerFlowParams(flowParamsFields, flowParamsValues, 'update', body);
     {% endif %}
 
