--- a/templates/contacts/contact_invite_participants.haml
+++ b/templates/contacts/contact_invite_participants.haml
@@ -161,16 +161,6 @@
                                 )
                                   -trans "Invite"
 
-                            // This is needed for action buttons
-                            %td.hide
-                              .value-labels
-                                %nobr
-                                  - for group in object.all_groups.all
-                                    - if group.group_type == 'U'
-                                      %span.label.label-info.lbl{ data-id: '{{group.id}}'}
-                                        %a{'href':'{% url "contacts.contact_filter" group.uuid %}'}
-                                          {{group.name}}
-
                         -empty
                           %tr
                             %td{colspan:3}
@@ -214,6 +204,10 @@
       box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.1), 0 1px 2px 0 rgba(0, 0, 0, 0.06);
       border-radius: 0.5rem;
       margin: 0 2.5px;
+    }
+
+    .table-container table {
+      overflow: unset;
     }
 
     tr.contacts th a span.icon {
@@ -287,6 +281,13 @@
     .invite-column {
       display: table-cell !important;
       width: 100px;
+      position: sticky;
+      position: -webkit-sticky;
+      right: 0;
+    }
+
+    td.invite-column {
+      background: white;
     }
 
     .control-label {
