fix: remove user config and org users management

--- a/templates/orgs/org_home.haml
+++ b/templates/orgs/org_home.haml
@@ -164,3 +164,7 @@
     .formax-vertical ul.errorlist {
       margin-left: 0px !important;
     }
+
+    #id-user, #id-accounts {
+      display: none;
+    }
