fix: usage of use_weni_layout

--- a/templates/orgs/org_home.haml
+++ b/templates/orgs/org_home.haml
@@ -165,6 +165,8 @@
       margin-left: 0px !important;
     }
 
-    #id-user, #id-accounts {
-      display: none;
-    }
+    {% if use_weni_layout %}
+      #id-user, #id-accounts {
+        display: none;
+      }
+    {% endif %}
