--- a/templates/flows/flow_editor.haml
+++ b/templates/flows/flow_editor.haml
@@ -201,6 +201,7 @@
 -block extra-script
   {{ block.super }}
 
+  %script{type:'text/javascript', src:'{{ STATIC_URL }}js/html2canvas.min.js'}
   -for script in scripts
     %script{type:'text/javascript', src:'{{script}}'}
 
@@ -250,14 +251,29 @@
         e.stopPropagation(); // Prevent print to PDF call on this page.
         if ($.browser.mozilla) {
           // For Mozilla Firefox we use a different way of exporting because it correctly exports to PDF only the first page.
-          let modal = new ConfirmationModal(gettext("Flow Export"), gettext("The current flow will be exported as an image."));
-          modal.ele.find(".primary").click(() => {
-            modal.setMessage(gettext("Exporting in progress..."));
-            modal.ele.find('.loader').show();
-            modal.ele.find('.modal-footer').hide();
-            exportFlowAsImage(() => modal.dismiss());
-          });
-          modal.show();
+          if(!document.querySelector("#image-export-confirmation")) {
+            let imageExportConfirmation = document.createElement("temba-dialog");
+            imageExportConfirmation.id = "image-export-confirmation";
+            imageExportConfirmation.header = gettext("Flow Export");
+            let dialogBody = document.createElement("div")
+            dialogBody.className = "body";
+            dialogBody.innerHTML = `<p style="margin: 20px;">${gettext("The current flow will be exported as an image.")}</p>`;
+            imageExportConfirmation.body = dialogBody;
+            imageExportConfirmation.addEventListener("temba-button-clicked", function(event) {
+              if (!event.detail.button.secondary) {
+                imageExportConfirmation.loading = true;
+                exportFlowAsImage(() => {
+                  imageExportConfirmation.open = false;
+                  imageExportConfirmation.loading = false;
+                });
+              }
+            });
+            document.body.append(imageExportConfirmation);
+            imageExportConfirmation.open = true;
+          } else {
+            let imageExportConfirmation = document.querySelector("#image-export-confirmation");
+            imageExportConfirmation.open = true;
+          }
         } else {
           // In all other case we use normal exporting.
           Object.assign(document.createElement('a'), {
@@ -266,6 +282,73 @@
           }).click();
         }
       });
+    }
+
+    function prepareDataForImageExport(documentCopy) {
+
+      function replaceContent(element, content) {
+        let newElement = documentCopy.createElement('span');
+        newElement.innerHTML = content;
+        element.parentNode.replaceChild(newElement, element);
+      }
+
+      documentCopy.querySelectorAll('[class*="fe-"]').forEach((el) => {
+        if (el.className.includes('fe-paperclip')) {
+          replaceContent(el, "📎");
+        } else if (el.className.includes('fe-group')) {
+          replaceContent(el, "👥");
+        } else if (el.className.includes('fe-label')) {
+          replaceContent(el, "🏷️");
+        } else {
+          replaceContent(el, "");
+        }
+      });
+      documentCopy.querySelectorAll('[class*="Pill_pill"], [class*="Exit_name"]').forEach((el) => {
+        el.style.fontSize = (parseFloat(window.getComputedStyle(el).fontSize) - 1) + 'px';
+      });
+    }
+
+    function exportFlowAsImage(callback) {
+      setTimeout(() => {
+        let body = document.body;
+        let html = document.documentElement;
+        let width = Math.max( body.scrollWidth, body.offsetWidth, html.clientWidth, html.scrollWidth, html.offsetWidth );
+        let container = $("#editor-container");
+        let config = {
+          x: 0,
+          y: 0,
+          scrollX: 0,
+          scrollY: 0,
+          width: width,
+          height: container.height(),
+          allowTaint: true,
+          foreignObjectRendering: true,
+          imageTimeout: 30000,
+          logging: false,
+          useCORS: true,
+          onclone: prepareDataForImageExport,
+          ignoreElements: (elem) => {
+            let style = $(elem).attr('class') || '';
+            if (
+              style.includes('components_printButton') ||
+              style.includes('Simulator_simulator') ||
+              style.includes('PopTab_tab') ||
+              style.includes('LanguageSelector_language')
+            ) {
+              return true;
+            }
+            return false;
+          }
+        };
+        html2canvas(container[0], config).then (canvas => {
+          Object.assign(document.createElement('a'), {
+            download: "{{ object.name }}.jpg",
+            href: canvas.toDataURL('jpeg', 1.0),
+          })
+          .click();
+          callback();
+        });
+      }, 1000)
     }
 
     function handleActivityClicked(nodeUUID, count) {
