--- a/templates/orgs/org_join.haml
+++ b/templates/orgs/org_join.haml
@@ -1,20 +1,13 @@
 -extends "smartmin/update.html"
 -load i18n
 
+-block title
+  {{title}}
+  .subtitle
+    -block subtitle
+      {{block.super}}
+
 -block content
-
-  .page-title
-    -trans "Choose Workspace"
-
-  .flex.w-full.mb-4.items-end.flex-wrap.justify-end{style:"min-height:41px"}
-    .flex-grow.ml-1.self-end.items-end
-      .flex.flex-col.pr-12
-        .page-title.leading-tight
-          -block title
-            {{title}}
-          .subtitle
-            -block subtitle
-
   .flex.w-full.mb-4
     .flex-grow.ml-1
       -blocktrans trimmed with name=org.name
