Fix DT One credential validation and text

--- a/templates/orgs/org_chatbase.haml
+++ b/templates/orgs/org_chatbase.haml
@@ -12,7 +12,7 @@
     -trans "Connected to Chatbase Account"
     <b>{{chatbase_agent_name}}</b>.
   -else
-    -trans "Connect your Chatbase account"
+    -trans "Connect your Chatbase account."
 
 -block pre-form
   -if not object.get_chatbase_credentials.0
