Fixed covering of message by splash screen.

--- a/templates/public/public_index.haml
+++ b/templates/public/public_index.haml
@@ -41,6 +41,11 @@
           }
         }
 
+        .alert {
+          z-index: 1;
+          opacity: .9;
+        }
+
     {% endlessblock %}
 
 -block post-header
