--- a/templates/orgs/org_smtp_server.haml
+++ b/templates/orgs/org_smtp_server.haml
@@ -1,42 +1,34 @@
 -extends "smartmin/form.html"
-
 -load compress temba smartmin i18n
 
--block title-icon
-  .title-icon
-    %span.glyph.icon-email
-
--block title-text
-  .title-text
-    %h1
-      -trans "Remove SMTP configuration"
-
 -block summary
+  -if flow_from_email
     -blocktrans trimmed with from_email=flow_from_email
-      Emails sent from flows will come from <b>{{from_email}}</b>.
+      Emails sent from flows will be sent from <b>{{ from_email }}</b>.
+  -else
+    -trans "Configure email settings to enable sending of emails from flows."
 
 -block pre-form
   .mb-4
     -blocktrans trimmed with brand=brand.name
-      You can configure {{ brand }} to send emails generated within flows from an email address of your choosing. <br/>
-      This will let you receive replies from your recipients.
+      You can configure {{ brand }} to send emails generated within flows from an email address of your choosing.
 
   -if object.has_smtp_config and request.META.HTTP_X_FORMAX
     .mb-4
       -blocktrans trimmed with from_email=flow_from_email
-        If you no longer want to use {{ from_email }} to send emails, you can <a href='javascript:confirmSMTPRemove();'>remove your SMTP configuration</a>.
+        If you no longer want to use {{ from_email }} to send emails, you can <a href='javascript:confirmSMTPRemove();'>remove your SMTP settings</a>.
 
     .remove-smtp.hide
       .title
-        -trans "Remove SMTP configuration"
+        -trans "Remove SMTP Settings"
       .body
-        -blocktrans trimmed with brand=brand.name
-          Removing your SMTP configuration will result in emails being delivered from {{ brand }} that cannot be replied to. Are you sure you want to continue?
+        -blocktrans trimmed
+          Removing these settings will prevent emails being sent from flows. Are you sure you want to continue?
     
       #remove-smtp-form{href:'{% url "orgs.org_smtp_server" %}?disconnect=true'}
 
 -block fields
-  -render_field 'smtp_from_email'
+  -render_field 'from_email'
 
   .flex
     .host.flex-grow.mr-4
