--- a/templates/orgs/org_edit.haml
+++ b/templates/orgs/org_edit.haml
@@ -1,6 +1,5 @@
 -extends 'smartmin/form.html'
--load smartmin humanize
--load i18n
+-load smartmin humanize i18n
 
 -block fields
   {% render_field 'name' %}
@@ -28,11 +27,7 @@
             You have <b>{{org_count}}</b> child workspaces.
           {% endblocktrans%}
 
-
     .buttons
       -if object.is_multi_org
         .button-light(onclick="goto(event)" href='{% url "orgs.org_sub_orgs" %}')
           -trans "Manage Workspaces"
-
-
-
