--- a/templates/orgs/org_nexmo_connect.haml
+++ b/templates/orgs/org_nexmo_connect.haml
@@ -1,21 +1,14 @@
 -extends "smartmin/form.html"
-
--load compress temba i18n
+-load i18n
 
 -block title
   -trans "Connect Nexmo"
 
 -block pre-form
   .mb-4
-    %p
-      -trans "To connect your Nexmo Account you will need to provide us your Nexmo API key and secret."
-
-    %p
-      -trans "Both values can be found on your"
-      <a target="nexmo" href="https://dashboard.nexmo.com/settings">
-      -trans "Nexmo Settings Page"
-      </a>
-      -trans "in the API Settings section."
+    -blocktrans trimmed with settings_url='https://dashboard.nexmo.com/settings'
+      To connect your Nexmo Account you will need to provide us your API key and secret. Both values can be found
+      on your <a target="nexmo" href="{{ settings_url }}">Nexmo settings</a> page in the API Settings section.
 
 -block extra-script
   {{block.super}}
