--- a/static/fonts/icons/style.css
+++ b/static/fonts/icons/style.css
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'temba';
-  src:  url('fonts/temba.eot?s52jmb');
-  src:  url('fonts/temba.eot?s52jmb#iefix') format('embedded-opentype'),
-    url('fonts/temba.ttf?s52jmb') format('truetype'),
-    url('fonts/temba.woff?s52jmb') format('woff'),
-    url('fonts/temba.svg?s52jmb#temba') format('svg');
+  src:  url('fonts/temba.eot?j326sm');
+  src:  url('fonts/temba.eot?j326sm#iefix') format('embedded-opentype'),
+    url('fonts/temba.ttf?j326sm') format('truetype'),
+    url('fonts/temba.woff?j326sm') format('woff'),
+    url('fonts/temba.svg?j326sm#temba') format('svg');
   font-weight: normal;
   font-style: normal;
   font-display: block;
@@ -673,9 +673,6 @@
 .icon-channel-kannel:before {
   content: "\e608";
 }
-.icon-channel-nexmo:before {
-  content: "\e0c5";
-}
 .icon-channel-plivo:before {
   content: "\e0d1";
 }
@@ -724,12 +721,6 @@
 .icon-mtarget:before {
   content: "\e914";
 }
-.icon-nexmo:before {
-  content: "\e0c4";
-}
-.icon-nexmo_inverted:before {
-  content: "\e0c6";
-}
 .icon-plivo:before {
   content: "\e0cf";
 }
@@ -777,4 +768,7 @@
 }
 .icon-zendesk:before {
   content: "\e918";
+}
+.icon-vonage:before {
+  content: "\e910";
 }
