--- a/templates/channels/channel_bulk_sender_options.haml
+++ b/templates/channels/channel_bulk_sender_options.haml
@@ -13,7 +13,7 @@
       number to receive messages, and use a bulk sender for your outgoing messages.
 
   -if not user_org.is_connected_to_nexmo
-    %temba-modax.inline-block.mb-1(endpoint="{% url 'orgs.org_nexmo_connect'%}" header='{{_("Connect Nexmo")|escapejs}}')
+    %temba-modax.inline-block.mb-1(endpoint="{% url 'orgs.org_nexmo_connect'%}" header='{{_("Connect Vonage")|escapejs}}')
       .card.link
         .relative
           .text-base.absolute.text-gray-100.bg-icon.icon-channel-nexmo
