--- a/templates/channels/types/vonage/claim.haml
+++ b/templates/channels/types/vonage/claim.haml
@@ -1,7 +1,5 @@
 -extends "channels/channel_claim_number.html"
-
--load compress temba
--load i18n
+-load temba i18n
 
 -block country-select
   %temba-select#country(name="country" label='{{_("Country")|escapejs}}')
