--- a/templates/contacts/contactimport_preview.haml
+++ b/templates/contacts/contactimport_preview.haml
@@ -52,11 +52,50 @@
                     -else
                       %strong
                         {{ column.mapping.name }}
+        %hr.m-5
+        %fieldset.mb-5
+          %table
+            %tr.mapping.w-full.items-center
+              %td.p-1
+                -render_field 'add_to_group'
+              %td
+                -trans "Add contacts to"
+              %td
+                -render_field 'group_mode'
+                %span.new-group-controls
+                  -trans "called"
+                  -render_field 'new_group_name'
+                %span.existing-group-controls.hide
+                  -render_field 'existing_group'
 
       .flex.mt-4
         %input.button-primary(type="submit" value='{% trans "Import" %}')
         .ml-4.button-light(onclick="javascript:history.go(-1)")
           -trans "Cancel"
+
+
+-block extra-script
+  {{ block.super }}
+
+  :javascript
+    function updateGroupMode(groupMode) {
+      if (groupMode === "N") {
+        $(".new-group-controls").show();
+        $(".existing-group-controls").hide();
+      } else {
+        $(".new-group-controls").hide();
+        $(".existing-group-controls").show();
+      }
+    }
+
+    $(function() {
+      var groupModeSelect = document.querySelector("temba-select[name='group_mode']");
+      groupModeSelect.addEventListener('change', function(event) {
+        updateGroupMode(event.target.values[0].value);
+      });
+
+      updateGroupMode("{{ form.group_mode.value }}");
+    });
 
 
 -block extra-style
@@ -86,5 +125,20 @@
     .mapping .value-type-control {
       display: inline-block;
       width: 120px;
+      margin: 0 3px;
+    }
+    .mapping .field_group_mode {
+      display: inline-block;
+      width: 160px;
+      margin: 0 3px;
+    }
+    .mapping .field_new_group_name {
+      display: inline-block;
+      width: 200px;
+      margin: 0 3px;
+    }
+    .mapping .field_existing_group {
+      display: inline-block;
+      width: 200px;
       margin: 0 3px;
     }
