Fix typo in CSS class name

--- a/templates/orgs/org_nexmo_account.haml
+++ b/templates/orgs/org_nexmo_account.haml
@@ -12,7 +12,7 @@
         If you no longer want it connected, you can <a href="{{ url }}">disconnect your Vonage account</a>.
 
     -if org_perms.channels.channel_delete
-      .disconnect-vonageo.hide
+      .disconnect-vonage.hide
         .title
           -trans "Disconnect Vonage"
         .body
