--- a/static/css/tailwind.css
+++ b/static/css/tailwind.css
@@ -1505,7 +1505,7 @@ a:hover {
 .lbl-icon {
   color: rgba(0, 0, 0, .3);
   font-size: 11px;
-  font-family: 'icons' !important;
+  font-family: 'temba' !important;
   speak: never;
   font-style: normal;
   font-weight: normal;
@@ -1550,7 +1550,7 @@ a:hover {
 .lbl-group::before {
     color: rgba(0, 0, 0, .3);
     font-size: 11px;
-    font-family: 'icons';
+    font-family: 'temba';
     speak: never;
     font-style: normal;
     font-weight: normal;
@@ -1625,7 +1625,7 @@ a:hover {
 .lbl-group-dynamic::before {
     color: rgba(0, 0, 0, .3);
     font-size: 11px;
-    font-family: 'icons';
+    font-family: 'temba';
     speak: never;
     font-style: normal;
     font-weight: normal;
